Compounds header - overflow fix

--- a/metabolights-webapps/src/main/webapp/css/MetCompound.css
+++ b/metabolights-webapps/src/main/webapp/css/MetCompound.css
@@ -22,7 +22,7 @@ nav#breadcrumb{
 
 .banner{
     background-color: #333;
-    height: 50px;
+    min-height: 50px;
     color: #fff;
     padding: 10px 20px;
     display: flex;
